<resources>
    <string name="app_name">E-Commerce</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="appname">Snapshop</string>
    <string name="appdesc">Jelajahi dunia belanja online yang tak terbatas bersama Snapshop!</string>
    <string name="registrasidesc">Pengguna Baru? Registrasi</string>
    <string name="registerbutton">di sini</string>
    <string name="login">Login Sebagai</string>
    <string name="tombol_login">tombol login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_sebagai">Login Sebagai</string>
    <string name="add_staff">Registrasi Staff</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="id_staff">ID Staff</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="profile">Profile</string>
    <string name="id">ID</string>
    <string name="add_stok">Tambah Stok Barang</string>
    <string name="id_barang">ID Barang</string>
    <string name="kategori_barang">Kategori Barang</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="brand">Brand</string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="harga_barang">Harga Barang</string>

    <!-- ......................................................... -->
    <string name="dropdown_kategoriBarang">Sektor Usaha</string>
    <string-array name="kategoriBarang_display">
        <item>Kategori Barang</item>
        <item>Pakaian Pria</item>
        <item>Pakaian Wanita</item>
        <item>Komputer</item>
        <item>Handphone</item>
        <item>Buku</item>
        <item>Lainnya</item>
    </string-array>

    <string-array name="kategoriBarang_value">
        <item>Pilih</item>
        <item>Pakaian_Pria</item>
        <item>Pakaian_Wanita</item>
        <item>Komputer</item>
        <item>Handphone</item>
        <item>Buku</item>
        <item>Lainnya</item>
    </string-array>

    <!-- ......................................................... -->
</resources>